plugins {
	id 'java'
}

repositories {
	mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
	}
	mavenCentral()
}

def runeLiteVersion = 'latest.release'

dependencies {
	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
	compileOnly 'org.projectlombok:lombok:1.18.20'
	annotationProcessor 'org.projectlombok:lombok:1.18.20'
	testImplementation 'junit:junit:4.12'
	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
	implementation 'org.json:json:20230227'
}

group = 'com.example'
version = '4.3'
sourceCompatibility = "11"

tasks.withType(Jar) {
	manifest {
		attributes["Main-Class"] = "com.example.Main"
	}
}
task FatJar(type: Jar) {
	manifest {
		attributes 'Main-Class': 'com.example.Main'
	}
	baseName = 'EthanVannPlugins'
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
	with jar
}
tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}
targetCompatibility = JavaVersion.VERSION_11
